--- a/reg2.html
+++ b/reg2.html
@@ -85,7 +85,7 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-                    tg.showAlert("Nu ti i molodec", () => {
+                    tg.showAlert("Спасибо за Регистрацию!", () => {
                     // Callback function after the alert is closed
                     // Redirect to the home page
                     window.location.href = 'https://carrion626.github.io/home.html';
