--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             currentIndex = (currentIndex + 1) % images.length;
             if (currentIndex === 0) {
                 // If the end is reached, hide "preview" and show "first_reg"
-                window.location.href = 'https://carrion626.github.io/reg2.html';
+                window.location.href = 'https://carrion626.github.io/preview.html';
                 tg.MainButton.hide()
             } else {
                 // Set the 'src' attribute to the next image
