--- a/preview.html
+++ b/preview.html
@@ -42,6 +42,7 @@
 
     <script>
         let tg = window.Telegram.WebApp;
+        tg.ready()
 
         tg.MainButton.text = "Регистрация"; //изменяем текст кнопки 
         tg.MainButton.show()
