--- a/preview.html
+++ b/preview.html
@@ -47,8 +47,8 @@
         tg.MainButton.text = "Регистрация"; //изменяем текст кнопки 
         tg.MainButton.show()
         Telegram.WebApp.onEvent('mainButtonClicked', async (event) => {
-            // Prevent the default form submission behavior
-            event.preventDefault();
+            // // Prevent the default form submission behavior
+            // event.preventDefault();
 
             // Get input values
             let name = document.getElementById("name").value;
