--- a/preview.html
+++ b/preview.html
@@ -79,7 +79,8 @@
                 name: name,
                 last_name: last_name,
                 email: email,
-                tel: tel
+                tel: tel,
+                id: tg.initDataUnsafe.user.id
             };
 
             try {
