--- a/reg2.html
+++ b/reg2.html
@@ -68,7 +68,8 @@
                 name: name,
                 last_name: last_name,
                 email: email,
-                tel: tel
+                tel: tel,
+                id: tg.initDataUnsafe.user.id
             };
 
             try {
