--- a/preview.html
+++ b/preview.html
@@ -45,7 +45,7 @@
     <script>
         let tg = window.Telegram.WebApp;
 
-        tg.MainButton.text = "Назад"; //изменяем текст кнопки 
+        tg.MainButton.text = "Зарегистрироваться"; //изменяем текст кнопки 
         tg.MainButton.show()
         Telegram.WebApp.onEvent('mainButtonClicked', function(){
             simulateRegisterButtonClick();
