--- a/reg2.html
+++ b/reg2.html
@@ -20,19 +20,19 @@
         <br>
         <h1>Регистрация</h1>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+        <img src="images/QR.webp" alt="Huyatina Image">
 
-        <form method="POST">
-            <!-- ADD "REQUIRED TO EVERY FIELD" -->
+        <!-- <form method="POST">
             <input type="text" id="name" placeholder="Имя" required> 
             <input type="text" id="lastname" placeholder="Фамилия" >
             <input type="text" id="email" placeholder="e-mail@gmail.com" >
             <input type="text" id="tel" placeholder="Телефон" >
             <input type="text" id="city" placeholder="Город" >
-            <!-- <input type="text" id="school" placeholder="school" >
-            <input type="text" id="position" placeholder="position"> -->
+            <input type="text" id="school" placeholder="school" >
+            <input type="text" id="position" placeholder="position">
             <button id="register">Зарегистрироваться</button>
 
-        </form>
+        </form> -->
     </div>
 
     <!-- Add three <br> elements initially -->
