--- a/contacts.html
+++ b/contacts.html
@@ -25,16 +25,16 @@
             <h1>Контакты</h1>
             <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
 
-            <label>Имя:</label> <p id="cont">Anton</p><br>
-            <label>Фамилия:</label> <p id="cont">Grigorievich</p><br>
-            <label>Телефон:</label> <p id="cont">+23038534953</p><br>
-            <label>E-mail:</label> <p id="cont">anton@anton.anton</p><br>
+            <label>Администратор площадки</label> <p id="cont">Кирилл <a href="https://telegram.me/koshenkov">@koshenkov</a></p><br>
+            <label>Поставить командировочный</label> <p id="cont">Данил <a href="https://telegram.me/rikower">@rikower</a></p><br>
+            <label>Вопрос к организатору</label> <p id="cont">Александра <a href="https://telegram.me/semakina_shu">@semakina_shu</a></p><br>
+            <!-- <label>E-mail:</label> <p id="cont">anton@anton.anton</p><br>
             <label>Должность:</label> <p id="cont">Senior Anton in Anton&Co. Industries</p><br>
             <label>Адрес:</label> <p id="cont">Turkey, Istanbul, Kadikoy Ortaboyir Pembe Sokak 39/2, apt.17</p><br>
             <label>Индекс:</label> <p id="cont">651728 TR</p><br>
             <label>Ближайщий родственник:</label> <p id="cont">(Anton's Mother) Antonia</p><br>
             <label>Рабочие часы:</label> <p id="cont">17:00 - 23:00 everyday</p><br>
-            <label>Что-то еще:</label> <p id="cont">ANTON</p><br>
+            <label>Что-то еще:</label> <p id="cont">ANTON</p><br> -->
 
             
         </div>
