--- a/reg2.html
+++ b/reg2.html
@@ -18,7 +18,7 @@
             <img src="images/register.jpg" alt="Huyatina Image">
         </div>
         <br>
-        <h1>Регистрация</h1>
+        <h1>Предъявите QR Code Администратору на стойке регистрации</h1>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
         <img src="images/QR.jpg" style="width: 90%;">
 
