--- a/route.html
+++ b/route.html
@@ -24,9 +24,9 @@
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
 
         <div id="contectimg">
-            <img src="images/r1.jpg" class="zoomable-image">
+            <img src="images/route111.jpg" class="zoomable-image">
         </div> 
-        <div id="contectimg">
+        <!-- <div id="contectimg">
             <img src="images/r2.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
@@ -37,7 +37,7 @@
         </div>
         <div id="contectimg">
             <img src="images/r5.jpg" class="zoomable-image">
-        </div>  
+        </div>   -->
         <br> 
             <button id="map">Карта</button>
     </div>
