--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
         });
 
         chat.addEventListener("click", () => {
-            let telegramChatLink = "https://t.me/+KJTqWEkCrEIzZjZi";
+            let telegramChatLink = "https://t.me/meropriatie01";
             tg.openTelegramLink(telegramChatLink);
         });
 
