--- a/route.html
+++ b/route.html
@@ -46,7 +46,7 @@
         let map = document.getElementById("map");
 
         map.addEventListener("click", async (event) => {
-            let link = "https://www.google.com/maps/place/%D0%9F%D1%80%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%BF%D0%B0%D1%80%D0%BA/@46.4632743,30.7140641,14z/data=!4m15!1m8!3m7!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!2z0J7QtNC10YHRgdCwLCDQntC00LXRgdGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgNjUwMDA!3b1!8m2!3d46.4702111!4d30.7306393!16zL20vMGZmbXA!3m5!1s0x40c6322a669dbfad:0x5988a07aa870d0b6!8m2!3d46.4659795!4d30.7294358!16s%2Fg%2F1vnrjjfd?entry=ttu";
+            let link = "https://www.google.com/maps/place/Taksim+Meydan%C4%B1/@41.0370625,28.9853125,17z/data=!3m1!4b1!4m6!3m5!1s0x14cab72d2715dce5:0x4c4b6a9dfb528b1b!8m2!3d41.0370625!4d28.9853125!16s%2Fg%2F11kjjd_37t?entry=ttu";
             tg.openLink(link);
         })
     </script>
