--- a/reg2.html
+++ b/reg2.html
@@ -20,7 +20,7 @@
         <br>
         <h1>Предъявите QR Code Администратору на стойке регистрации</h1>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
-        <img src="images/frame.png" style="width: 90%;">
+        <img src="images/QRC.jpg" style="width: 90%;">
 
         <!-- <form method="POST">
             <input type="text" id="name" placeholder="Имя" required> 
