--- a/presentation.html
+++ b/presentation.html
@@ -30,7 +30,7 @@
         <div id="contectimg1">
             <img id="zoomImage1" src="images/speaker2.jpg" class="zoomable-image">
         </div> 
-        <button class="speaker" data-pdf="Emilia.pdf">Эмилия Ли</button>
+        <button class="speaker" data-pdf="emilia.pdf">Эмилия Ли</button>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
 
     </div>
