--- a/presentation.html
+++ b/presentation.html
@@ -42,7 +42,7 @@
             speaker.addEventListener("click", async (event) => {
                 let pdfFileName = speaker.getAttribute("data-pdf");
 
-                let response = await fetch(`https://23dd-2a02-ff0-220-af6f-d33-95eb-5a26-5b02.ngrok-free.app/pdf?filename=${pdfFileName}`, {
+                let response = await fetch(`https://5762-149-102-240-90.ngrok-free.app/pdf?filename=${pdfFileName}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
