--- a/presentation.html
+++ b/presentation.html
@@ -42,7 +42,7 @@
             speaker.addEventListener("click", async (event) => {
                 let pdfFileName = speaker.getAttribute("data-pdf");
 
-                let response = await fetch(`https://5762-149-102-240-90.ngrok-free.app/pdf?filename=${pdfFileName}`, {
+                let response = await fetch(`https://240f-88-232-174-175.ngrok-free.app/pdf?filename=${pdfFileName}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
