--- a/preview.html
+++ b/preview.html
@@ -85,7 +85,7 @@
 
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('https://5762-149-102-240-90.ngrok-free.app/submit_registration', {
+                let response = await fetch('https://240f-88-232-174-175.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
