--- a/reg2.html
+++ b/reg2.html
@@ -74,7 +74,7 @@
 
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('https://6713-2a02-ff0-220-a1c6-3848-c73f-b3a-1305.ngrok-free.app/submit_registration', {
+                let response = await fetch('https://240f-88-232-174-175.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
